Change login location

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,7 +26,7 @@
         <web-resource-collection>
             <web-resource-name>Calendar</web-resource-name>
             <description/>
-            <url-pattern>/ControllerServlet</url-pattern>
+            <url-pattern>/</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
